@@ -1,7 +1,3 @@
-/*
- * $Id$
- * $Date$
- */
 package org.testng.internal.thread;
 
 
@@ -9,10 +5,9 @@ import java.util.concurrent.ExecutionException;
 import java.util.concurrent.Future;
 
 /**
- * Class javadoc XXX
+ * A very reduced interface of <code>Future</code>.
  *
  * @author <a href="mailto:the_mindstorm@evolva.ro>the_mindstorm</a>
- * @version $Revision$
  */
 public class FutureResultAdapter implements IFutureResult {
    Future<?> m_future;
@@ -24,8 +19,9 @@ public class FutureResultAdapter implements IFutureResult {
    public Object get() throws InterruptedException, ThreadExecutionException {
       try {
          return m_future.get();
-      } catch(ExecutionException ee) {
-         throw new ThreadExecutionException(ee.getCause()); // HINT there is no need to keep the EE
+      } 
+      catch(ExecutionException ee) {
+         throw new ThreadExecutionException(ee.getCause()); // NOTE there is no need to keep the EE
       }
    }
 }
